<resources>
    <string name="app_name">At Home</string>
    <string name="bill">관리비</string>
    <string name="parking">주차장</string>
    <string name="community">커뮤니티</string>
    <string name="notice">공지사항</string>
    <string name="menu">메뉴</string>
    <string name="search">검색</string>
    <string name="reserv_list">예약내역</string>
    <string name="now_reserv">현재내역</string>
    <string name="past_reserv">지난내역</string>
    <string name="account">계정관리</string>
    <string name="setting">환경설정</string>

    <string name="card_register">카드등록</string>
    <string name="point_charge">충전금</string>

    <string name="text_sign_up">회원가입</string>
    <string name="hint_sign_id">아이디를 입력해주세요</string>
    <string name="hint_sign_pass">비밀번호를 8자리 이상 입력해주세요</string>
    <string name="hint_sign_name">이름(실명)을 입력해주세요</string>
    <string name="hint_sign_email">E-mail</string>
    <string name="hint_sign_phone">휴대폰 번호를 입력해주세요</string>
    <string name="hint_sign_check_pass">비밀번호 확인</string>
    <string name="hint_sign_carnumber">차량번호를 입력해주세요</string>
    <string name="card_number">카드번호</string>

    <string name="change_password">비밀번호 변경</string>
    <string name="current_password">현재 비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="new_password_check">새 비밀번호 확인</string>

    <string name="car_list">차량목록</string>
    <string name="card_list">카드목록</string>
    <string name="car_register">차량등록</string>

    <string name="cancel">취소</string>
    <string name="register">등록</string>

    <string name="search_text">어디에 주차하세요?</string>

    <string name="phone_change">휴대폰변경</string>
    <string name="email_change">이메일 변경</string>
    <string name="hint_email_change">변경 할 이메일 입력</string>

    <string name="enroll_parking">주차장 공유하기</string>
    <string name="sharedparking">주차장등록</string>
    <string name="change">변경하기</string>

    <string name="hint_id">아이디를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>

    <string name="btn_login">로그인</string>
    <string name="btn_register">회원가입</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_check">확인</string>
    <string name="btn_findID">아이디 찾기</string>
    <string name="btn_findpw">비밀번호 찾기</string>
    <string name="btn_cancel">취소</string>
    <string name="separator">|</string>
    <string name="title_activity_register">register</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="switch_on">공유ON</string>
    <string name="switch_off">공유OFF</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="permission_1">[설정] > [권한] 에서 권한을 허용할 수 있습니다.</string>
    <string name="permission_2">사진 및 파일을 저장하기 위하여 접근 권한이 필요합니다.</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
</resources>
