<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fce4ec"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/text_sign_up"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dreamgothic7"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/text_sign_up"
            android:textColor="#e41653"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/sign_id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_id"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_check_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_check_pass"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_name"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_phone"
            android:inputType="phone"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/sign_carnumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:hint="@string/hint_sign_carnumber"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:fontFamily="@font/dreamgothic3"
            android:textSize="15sp"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/signUpCancelButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_border2"
                android:text="@string/btn_cancel"
                android:textColor="@color/white"
                android:fontFamily="@font/dreamgothic7"/>

            <Button
                android:id="@+id/signUpButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_border2"
                android:text="@string/btn_check"
                android:textColor="@color/white"
                android:fontFamily="@font/dreamgothic7"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>