<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/account_change_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fce4ec"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:contentInsetStart="0dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_back_change_password"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:background="#00ff0000"
            android:drawableRight="@drawable/back"

            android:gravity="center"
            android:text=""
            app:layout_constraintBottom_toBottomOf="@+id/reserv_list_toolbar"
            app:layout_constraintEnd_toEndOf="@+id/reserv_list_toolbar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/reserv_list_toolbar"
            app:layout_constraintTop_toTopOf="@+id/reserv_list_toolbar"
            app:layout_constraintVertical_bias="0.615"/>

        <TextView
            android:id="@+id/change_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/dreamgothic7"
            android:text="@string/change_password"
            android:textColor="#000000"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="212dp"
            tools:layout_editor_absoluteY="15dp" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/pw_change_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-다른 아이디/사이트에서 사용한 적 없는 비밀번호" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="-이전에 사용한 적 없는 비밀번호가 안전합니다." />

        <EditText
            android:id="@+id/current_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:fontFamily="@font/dreamgothic3"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_pw"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:fontFamily="@font/dreamgothic3"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/new_pw_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_border"
            android:fontFamily="@font/dreamgothic3"
            android:hint="@string/new_password_check"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/input_register"
            android:textColorHint="@color/input_register_hint"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_change_pw_cancel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/edit_border2"
                android:fontFamily="@font/dreamgothic7"
                android:text="@string/btn_cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_change_pw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/edit_border2"
                android:fontFamily="@font/dreamgothic7"
                android:text="@string/btn_check"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>