<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/toolbar_background"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:contentInsetStart="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn_login_cancel"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:background="#00ff0000"
            android:drawableRight="@drawable/back2"
            android:gravity="center"
            android:text="" />

    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/bareun1"
        android:gravity="center"
        android:text="아차하면주차"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:fontFamily="@font/circe"
        android:gravity="center"
        android:text="acha"
        android:textColor="@color/white"
        android:textSize="33dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="아  차  파  킹"
        android:fontFamily="@font/bareun1"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingRight="30dp">

            <EditText
                android:id="@+id/et_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_back"
                android:fontFamily="@font/bareun1"
                android:hint="@string/hint_id"
                android:inputType="textCapWords"
                android:padding="10dp"
                android:textColor="#616161"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_pw"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_back"
                android:fontFamily="@font/bareun1"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="#616161"
                android:textColorHint="#9e9e9e"
                android:textSize="16sp" />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/login"
                android:fontFamily="@font/dreamgothic7"
                android:text="@string/btn_login"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="230dp"
            android:layout_height="17dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_find_ID"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:fontFamily="@font/bareun3"
                android:text="@string/btn_findID"
                android:textColor="#f5f5f5"
                android:textSize="13sp" />

            <Button
                android:id="@+id/separator1"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:fontFamily="@font/bareun3"
                android:text="@string/separator"
                android:textColor="#f5f5f5"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_find_pw"
                android:layout_width="95dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:fontFamily="@font/bareun3"
                android:text="@string/btn_findpw"
                android:textColor="#f5f5f5"
                android:textSize="13sp" />

            <Button
                android:id="@+id/separator2"
                android:layout_width="31dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:fontFamily="@font/bareun3"
                android:text="@string/separator"
                android:textColor="#f5f5f5"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#00ff0000"
                android:fontFamily="@font/bareun3"
                android:text="@string/btn_register"
                android:textColor="#f5f5f5"
                android:textSize="13sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
